@@ -1,3 +1,12 @@
+2005-03-20  Jakub Jelinek  <jakub@redhat.com>
+
+	* posix/bits/unistd.h (pread) [__USE_FILE_OFFSET64]: Use __off64_t
+	instead of __off_t for last argument.
+	* debug/Makefile (tests): Add tst-lfschk{1,2,3}.
+	* debug/tst-lfschk1.c: New test.
+	* debug/tst-lfschk2.c: New test.
+	* debug/tst-lfschk3.c: New test.
+
 2005-03-19  Ulrich Drepper  <drepper@redhat.com>
 
 	* inet/test-ifaddrs.c: Use test-skeleton.
